--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
     <div class="halloween-bg"></div>
     <div class="container">
         <h1>LES PALETTES DU DIABLE</h1>
+        <div id="remaining">
+    <div class="counters-container">
+        <div class="team-counter">
+            <!-- Le contenu sera rempli dynamiquement par JavaScript -->
+        </div>
+        <div class="team-counter">
+            <!-- Le contenu sera rempli dynamiquement par JavaScript -->
+        </div>
+    </div>
+</div>
         <div id="currentDuel" class="current-duel"></div>
         <div class="game-area">
             <div class="team" id="challenge1">
