--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
                 <img id="grim-reaper" src="https://image.noelshack.com/fichiers/2024/42/3/1729102697-2o67-trz2-230518-removebg-preview.png" alt="Grim Reaper" class="floating" onclick="startGeneration()">
                 <div class="action-buttons">
                     <button id="nextDuelButton" class="btn hidden">Duel Suivant</button>
-                    <button id="restartGameButton" class="btn">Recommencer le jeu</button>
                 </div>
             </div>
             <div class="team" id="challenge2">
@@ -50,6 +49,9 @@
             <!-- Le contenu sera rempli dynamiquement par JavaScript -->
         </div>
     </div>
+                            <div class="action-buttons">
+                    <button id="restartGameButton" class="btn">Recommencer le jeu</button>
+                </div>
 </div>
         
     </div>
