--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+     <button id="restartGameButton" class="restart-btn">Recommencer le jeu</button>
     <div class="halloween-bg"></div>
     <div class="container">
         <h1>LES PALETTES DU DIABLE</h1>
@@ -49,9 +50,6 @@
             <!-- Le contenu sera rempli dynamiquement par JavaScript -->
         </div>
     </div>
-                            <div class="action-buttons">
-                    <button id="restartGameButton" class="btn">Recommencer le jeu</button>
-                </div>
 </div>
         
     </div>
