--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
             <div class="center-content">
                 <div id="result">-</div>
-                <img id="grim-reaper" src="https://image.noelshack.com/fichiers/2024/42/3/1729102697-2o67-trz2-230518-removebg-preview.png" alt="Grim Reaper" class="floating" onclick="startGeneration()">
+                <img id="grim-reaper" src="https://zupimages.net/up/24/43/yy93.png" alt="Grim Reaper" class="floating" onclick="startGeneration()">
                 <div class="action-buttons">
                     <button id="nextDuelButton" class="btn hidden">Duel Suivant</button>
                 </div>
